# invoce-extractor

./: .gitignore  CLAUDE.md  README.md  WORKLOG.md  catalog-info.yaml  mkdocs.yml  pyproject.toml  runner.py
.github/workflows/: ci.yml  worklog.yml
docs/: index.md
infra/: .terraform.lock.hcl  bigquery.tf  gcs.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  variables.tf
old_agent/: agent.py  extract.json  model.py
pdf_data_extraction_agent/: .env.example  WORKLOG.md  __init__.py  agent.py  extract.json  model.py
pdf_data_extraction_agent/extractors/: base.py  claro.py  generic.py  registry.py
pdf_data_extraction_agent/pipeline/: extract.py  handler.py  models.py  store.py
specs/001-expense-tracking-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-expense-tracking-pipeline/checklists/: requirements.md
specs/001-expense-tracking-pipeline/contracts/: bigquery-schema.md  gcs-event.md
tests/: conftest.py
tests/blackbox/: test_extraction.py  test_storage.py
tests/unit/: test_extract.py  test_model.py  test_registry.py  test_store.py
